--- a/services/project/src/styles/globals.css
+++ b/services/project/src/styles/globals.css
@@ -2,10 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-ul {
-  list-style-type: disc;
-}
+@layer base {
+  ul {
+    list-style-type: disc;
+  }
 
-ol {
-  list-style-type: decimal;
+  ol {
+    list-style-type: decimal;
+  }
 }
