--- a/services/project/src/styles/globals.css
+++ b/services/project/src/styles/globals.css
@@ -11,3 +11,35 @@
     list-style-type: decimal;
   }
 }
+
+@keyframes fade-in {
+  from {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes fade-out {
+  from {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  to {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+}
+
+@layer utilities {
+  .animate-fade-in {
+    animation: fade-in 0.5s ease-in-out forwards;
+  }
+
+  .animate-fade-out {
+    animation: fade-out 0.1s ease-out forwards;
+  }
+}
